@@ -1,3 +1,12 @@
+Fri Jun 11 18:06:54 2004  George Lebl <jirka@5z.com>
+
+	* src/dict.[ch], src/eval.c: add suggestion logic on undefined
+	  identifiers, a little screwy code, but somewhat works.
+
+	* src/calc.c: when we don't do mixed fractions try to be nice about
+	  printing larger fractions.  Kind of on crack, we should do it
+	  in more cases.
+
 Fri May 28 10:02:19 2004  George Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: The default font size for the console
